kubernetes/apps/main/factorio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorio
  namespace: factorio
  annotations:
    lbipam.cilium.io/ips: "10.69.50.66"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: factorio
  ports:
    - name: factorio
      port: 34197
      protocol: UDP
      targetPort: factorio
